# mofsynth_adv

./: .readthedocs.yaml  README.md  environment.yml  pyproject.toml
docs/: requirements.txt
docs/source/: cli_arguments.rst  conf.py  index.rst  installation.rst  modules.rst  mofid_help.rst  tutorial.rst
examples/: example_multiple_cifs.py  example_single_cif.py
src/mofsynth_adv/: __cli__.py  __init__.py  __main__.py  core.py  workflow.py
src/mofsynth_adv/modules/: ase_worker.py  linkers.py  mof.py  other.py
tests/: conftest.py  python_testing.py  test_api_script.py  test_cli.py  test_main.py  test_mof.py  test_other.py
tests/integration/: test_workflow.py
